--- a/work_001 copy.ipynb
+++ b/work_001 copy.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mj = joblib.load('mpdel_joblib')"
+    "mj = joblib.load('model_joblib')"
    ]
   },
   {
@@ -44,7 +44,7 @@
     }
    ],
    "source": [
-    "mj.predict(pd.DataFrame([[0,0,0]], columns=['Q1','Q2','Q3']))"
+    "mj.predict(pd.DataFrame([[0,0,0,1,1]], columns=['Q1','Q2','Q3','Q4','Q5']))"
    ]
   }
  ],
