--- a/work_001 copy.ipynb
+++ b/work_001 copy.ipynb
@@ -2,20 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import joblib"
+    "import pandas as pd \n",
+    "import array as arr"
    ]
   },
   {
@@ -24,28 +16,122 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mj = joblib.load('model_joblib')"
+    "import joblib"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "mj = joblib.load('model_joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "your intrest lies in Editing and visual media\n",
+      "your intrest lies in vlogging\n"
+     ]
     }
    ],
    "source": [
-    "mj.predict(pd.DataFrame([[0,0,0,1,1]], columns=['Q1','Q2','Q3','Q4','Q5']))"
+    "def get_user_input():\n",
+    "    \n",
+    "    arrays = []\n",
+    "    \n",
+    "    \n",
+    "    num_arrays = 7\n",
+    "    \n",
+    "    for i in range(num_arrays):\n",
+    "       \n",
+    "        user_input = input(f\"Enter the values for array {i+1}: \")\n",
+    "        \n",
+    "        \n",
+    "        array = [int(x) for x in user_input.replace(',', ' ').split()]\n",
+    "        \n",
+    "        \n",
+    "       \n",
+    "        arrays.append(array)\n",
+    "    \n",
+    "    return arrays\n",
+    "\n",
+    "\n",
+    "user_input_arrays = get_user_input()\n",
+    "output = mj.predict(pd.DataFrame(user_input_arrays, columns=['Q1','Q2','Q3','Q4','Q5']))\n",
+    "c1 = \"content creation\"\n",
+    "c2 = \"Editing and visual media\"\n",
+    "c3 = \"Photography\"\n",
+    "c4 = \"vlogging\"\n",
+    "c5 = \"Art and design\"\n",
+    "c6 = \"esports\"\n",
+    "if (output[0] == 1 ):\n",
+    "    print(f\"your intrest lies in {c1}\")\n",
+    "    if(output[1] == 1):\n",
+    "           print(f\"your intrest lies in {c2}\")\n",
+    "    elif(output[2] == 1):\n",
+    "         print(f\"your intrest lies in {c3}\")\n",
+    "    elif(output[3] == 1):\n",
+    "        print(f\"your intrest lies in {c4}\")\n",
+    "    elif(output[4] == 1):\n",
+    "        print(f\"your intrest lies in {c5}\")\n",
+    "    elif(output[5] == 1):\n",
+    "        print(f\"your intrest lies in {c6}\")\n",
+    "elif(output[1] == 1):\n",
+    "    print(f\"your intrest lies in {c2}\")\n",
+    "    if(output[2] == 1):\n",
+    "        print(f\"your intrest lies in {c3}\")\n",
+    "    elif(output[3] == 1):\n",
+    "            print(f\"your intrest lies in {c4}\")\n",
+    "    elif(output[4] == 1):\n",
+    "            print(f\"your intrest lies in {c5}\")\n",
+    "    elif(output[5] == 1):\n",
+    "            print(f\"your intrest lies in {c6}\")\n",
+    "    \n",
+    "elif(output[2] == 1):\n",
+    "    print(f\"your intrest lies in {c3}\")\n",
+    "    if(output[3] == 1):\n",
+    "        print(f\"your intrest lies in {c4}\")\n",
+    "    elif(output[4] == 1):\n",
+    "            print(f\"your intrest lies in {c5}\")\n",
+    "    elif(output[5] == 1):\n",
+    "            print(f\"your intrest lies in {c6}\")\n",
+    "elif(output[3] == 1):\n",
+    "    print(f\"your intrest lies in {c4}\")\n",
+    "    if(output[4] == 1):\n",
+    "            print(f\"your intrest lies in {c5}\")\n",
+    "    elif(output[5] == 1):\n",
+    "            print(f\"your intrest lies in {c6}\")\n",
+    "elif(output[4] == 1):\n",
+    "    print(f\"your intrest lies in {c5}\")\n",
+    "    if(output[5] == 1):\n",
+    "            print(f\"your intrest lies in {c6}\")\n",
+    "elif(output[5] == 1):\n",
+    "    print(f\"your intrest lies in {c6}\")\n",
+    "\n",
+    "# new_output = output[0:]\n",
+    "# if any(new_output== 1):\n",
+    "#     a \n",
+    "#     print(f\"You have shown interest {} category.\")\n",
+    "# else:\n",
+    "#     print(\"This category is not suitable for you.\")\n",
+    "    \n",
+    "      "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
