--- a/work_001 copy.ipynb
+++ b/work_001 copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,15 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "your intrest lies in Editing and visual media\n",
-      "your intrest lies in vlogging\n"
+      "You have less engagement in...content creation\n",
+      "You have less engagement in...Editing and visual media\n"
      ]
     }
    ],
@@ -66,64 +66,109 @@
     "\n",
     "user_input_arrays = get_user_input()\n",
     "output = mj.predict(pd.DataFrame(user_input_arrays, columns=['Q1','Q2','Q3','Q4','Q5']))\n",
-    "c1 = \"content creation\"\n",
-    "c2 = \"Editing and visual media\"\n",
-    "c3 = \"Photography\"\n",
-    "c4 = \"vlogging\"\n",
-    "c5 = \"Art and design\"\n",
-    "c6 = \"esports\"\n",
+    "c0 = \"content creation\"\n",
+    "c1 = \"Editing and visual media\"\n",
+    "c2 = \"Photography\"\n",
+    "c3 = \"vlogging\"\n",
+    "c4 = \"Art and design\"\n",
+    "c5 = \"esports\"\n",
     "if (output[0] == 1 ):\n",
-    "    print(f\"your intrest lies in {c1}\")\n",
+    "    print(f\"You are comfortable with... {c0}\")\n",
     "    if(output[1] == 1):\n",
-    "           print(f\"your intrest lies in {c2}\")\n",
+    "        print(f\"You are comfortable with... {c1}\")\n",
     "    elif(output[2] == 1):\n",
-    "         print(f\"your intrest lies in {c3}\")\n",
+    "        print(f\"You are comfortable with... {c2}\")\n",
     "    elif(output[3] == 1):\n",
-    "        print(f\"your intrest lies in {c4}\")\n",
+    "        print(f\"You are comfortable with... {c3}\")\n",
     "    elif(output[4] == 1):\n",
-    "        print(f\"your intrest lies in {c5}\")\n",
+    "        print(f\"You are comfortable with... {c4}\")\n",
     "    elif(output[5] == 1):\n",
-    "        print(f\"your intrest lies in {c6}\")\n",
+    "        print(f\"You are comfortable with... {c5}\")\n",
+    "        \n",
     "elif(output[1] == 1):\n",
-    "    print(f\"your intrest lies in {c2}\")\n",
+    "    print(f\"You are comfortable with... {c1}\")\n",
     "    if(output[2] == 1):\n",
-    "        print(f\"your intrest lies in {c3}\")\n",
+    "        print(f\"You are comfortable with... {c2}\")\n",
     "    elif(output[3] == 1):\n",
-    "            print(f\"your intrest lies in {c4}\")\n",
+    "        print(f\"You are comfortable with... {c3}\")\n",
     "    elif(output[4] == 1):\n",
-    "            print(f\"your intrest lies in {c5}\")\n",
+    "        print(f\"You are comfortable with... {c4}\")\n",
     "    elif(output[5] == 1):\n",
-    "            print(f\"your intrest lies in {c6}\")\n",
+    "        print(f\"You are comfortable with... {c5}\")\n",
     "    \n",
     "elif(output[2] == 1):\n",
-    "    print(f\"your intrest lies in {c3}\")\n",
+    "    print(f\"You are comfortable with... {c2}\")\n",
     "    if(output[3] == 1):\n",
-    "        print(f\"your intrest lies in {c4}\")\n",
+    "        print(f\"You are comfortable with... {c3}\")\n",
     "    elif(output[4] == 1):\n",
-    "            print(f\"your intrest lies in {c5}\")\n",
+    "        print(f\"You are comfortable with... {c4}\")\n",
     "    elif(output[5] == 1):\n",
-    "            print(f\"your intrest lies in {c6}\")\n",
+    "        print(f\"You are comfortable with... {c5}\")\n",
+    "        \n",
     "elif(output[3] == 1):\n",
-    "    print(f\"your intrest lies in {c4}\")\n",
+    "    print(f\"You are comfortable with... {c3}\")\n",
     "    if(output[4] == 1):\n",
-    "            print(f\"your intrest lies in {c5}\")\n",
+    "        print(f\"You are comfortable with... {c4}\")\n",
     "    elif(output[5] == 1):\n",
-    "            print(f\"your intrest lies in {c6}\")\n",
+    "        print(f\"You are comfortable with... {c5}\")\n",
+    "        \n",
     "elif(output[4] == 1):\n",
-    "    print(f\"your intrest lies in {c5}\")\n",
+    "    print(f\"You are comfortable with... {c4}\")\n",
     "    if(output[5] == 1):\n",
-    "            print(f\"your intrest lies in {c6}\")\n",
+    "        print(f\"You are comfortable with... {c5}\")\n",
+    "        \n",
     "elif(output[5] == 1):\n",
-    "    print(f\"your intrest lies in {c6}\")\n",
+    "    print(f\"You are comfortable with... {c5}\")\n",
     "\n",
-    "# new_output = output[0:]\n",
-    "# if any(new_output== 1):\n",
-    "#     a \n",
-    "#     print(f\"You have shown interest {} category.\")\n",
-    "# else:\n",
-    "#     print(\"This category is not suitable for you.\")\n",
+    "else: \n",
+    "    if (output[0] == 0 ):\n",
+    "        print(f\"You have less engagement in...{c0}\")\n",
+    "        if(output[1] == 0):\n",
+    "            print(f\"You have less engagement in...{c1}\")\n",
+    "        elif(output[2] == 0):\n",
+    "            print(f\"You have less engagement in...{c2}\")\n",
+    "        elif(output[3] == 0):\n",
+    "            print(f\"You have less engagement in...{c3}\")\n",
+    "        elif(output[4] == 0):\n",
+    "            print(f\"You have less engagement in...{c4}\")\n",
+    "        elif(output[5] == 0):\n",
+    "            print(f\"You have less engagement in...{c5}\")\n",
+    "        \n",
+    "    elif(output[1] == 0):\n",
+    "        print(f\"You have less engagement in...{c1}\")\n",
+    "        if(output[2] == 0):\n",
+    "            print(f\"You have less engagement in...{c2}\")\n",
+    "        elif(output[3] == 0):\n",
+    "            print(f\"You have less engagement in...{c3}\")\n",
+    "        elif(output[4] == 0):\n",
+    "            print(f\"You have less engagement in...{c4}\")\n",
+    "        elif(output[5] == 0):\n",
+    "            print(f\"You have less engagement in...{c5}\")\n",
     "    \n",
-    "      "
+    "    elif(output[2] == 0):\n",
+    "        print(f\"You have less engagement in...{c2}\")\n",
+    "        if(output[3] == 0):\n",
+    "            print(f\"You have less engagement in...{c3}\")\n",
+    "        elif(output[4] == 0):\n",
+    "            print(f\"You have less engagement in...{c4}\")\n",
+    "        elif(output[5] == 0):\n",
+    "            print(f\"You have less engagement in...{c5}\")\n",
+    "        \n",
+    "    elif(output[3] == 0):\n",
+    "        print(f\"You have less engagement in...{c3}\")\n",
+    "        if(output[4] == 0):\n",
+    "            print(f\"You have less engagement in...{c4}\")\n",
+    "        elif(output[5] == 0):\n",
+    "            print(f\"You have less engagement in...{c5}\")\n",
+    "        \n",
+    "    elif(output[4] == 0):\n",
+    "        print(f\"You have less engagement in...{c4}\")\n",
+    "        if(output[5] == 0):\n",
+    "            print(f\"You have less engagement in...{c5}\")\n",
+    "        \n",
+    "    elif(output[5] == 0):\n",
+    "        print(f\"You have less engagement in...{c5}\")\n",
+    "\n"
    ]
   },
   {
